--- a/conserto-front/src/index.html
+++ b/conserto-front/src/index.html
@@ -1,26 +1,27 @@
-<html>
-    <head>
-       <meta charset="utf-8">
-        <!-- importer le fichier de style -->
-        <link rel="stylesheet" href="style.css" media="screen" type="text/css" />
-    </head>
-    <body>
-        <div>
-            <!-- zone de connexion -->
+<!doctype html>
 
-            <form method="POST">
-                <h1>Connexion</h1>
+<html lang="en">
 
-                <label><b>Email</b></label>
-                <input type="text" placeholder="Entrer votre adresse mail" name="username" required>
-                <br>
-                <label><b>Password</b></label>
-                <input type="password" placeholder="Entrer le mot de passe" name="password" required>
-                <br>
-                <input type="submit" id='submit' value='LOGIN' >
+<head>
+
+  <meta charset="utf-8">
+
+  <title>Fishtest</title>
+
+  <base href="/">
 
 
-            </form>
-        </div>
-    </body>
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+</head>
+
+<body>
+
+  <app-root></app-root>
+
+</body>
+
 </html>
